# vispawn

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.de.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  api.py  index.html  main.py  pyproject.toml  requirements.txt
docs/: api-reference.md  contributing.md  get-started.md
docs/templates/: README.md  how-to-create.md
examples/: README.md  demo-guide.md
examples/engine/: README.md  index.html
examples/pythagorean/: README.md  index.html
vispawn/: __init__.py  agent.py  core.py  llm.py  templates.py
